--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -16,3 +16,46 @@
   -ms-transform: translate(-50%, -50%);
   -o-transform: translate(-50%, -50%);
 }
+
+/*
+PHONE MEDIA QUERY
+0 - 600px Phones
+600 - 900px Tablet Portraits
+900 - 1200px Tablet Landscape
+1200 - 1800px Normal styles applies
+1800 + : Big Desktops
+*/
+
+/*$breakpoint argument choices
+- phone
+- tab-port
+- tab-land
+- big-deskto
+
+ORDER: Base + typography > general layout + grid > page layout > components
+
+1em = 16px
+*/
+
+@mixin respond($breakpoint) {
+  @if $breakpoint == phone {
+    @media only screen and (max-width: 37.5em) {
+      @content;
+    } //660px => 600px/16 = 37.5 em
+  }
+  @if $breakpoint == tab-port {
+    @media only screen and (max-width: 56.25em) {
+      @content;
+    } //900px => 900/16 = 56.25em
+  }
+  @if $breakpoint == tab-land {
+    @media only screen and (max-width: 75em) {
+      @content;
+    } //1200px => 1200/16 = 75 em
+  }
+  @if $breakpoint == big-desktop {
+    @media only screen and (min-width: 112.5em) {
+      @content;
+    } //1800px => 1800/16 = 112.5em
+  }
+}
