--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -13,9 +13,32 @@
 /* Box sizing box border box change the box model so the the borders and paddings are no longer added to the total width or height we specify for the box */
 
 html {
-  font-size: 62.5%;
+  //This defines what 1rem is
+  font-size: 62.5%; //
+
+  @include respond(tab-land) {
+    // width < 1200
+    font-size: 56.25%; //1rem = 9px => 9/16 = 56.25%
+  }
+  @include respond(tab-port) {
+    // width < 900
+    font-size: 50%; //1rem = 8px, 8/16 = 50%
+  }
+  @include respond(big-desktop) {
+    font-size: 75%; //1 rem = 12, 12/16 = 75%
+  }
 }
 
 body {
   box-sizing: border-box;
+  padding: 3rem;
+
+  @include respond(tab-port) {
+    padding: 0;
+  }
+}
+
+::selection {
+  background-color: $color-primary;
+  color: $color-white;
 }
