--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -4,7 +4,6 @@ body {
   font-size: $default-font-size;
   line-height: 1.7;
   color: $color-grey-dark;
-  padding: 3rem;
 }
 
 .heading-primary {
@@ -21,6 +20,11 @@ body {
     letter-spacing: 3.5rem;
     animation: moveInLeft 1s ease-out;
     -webkit-animation: moveInLeft 1s ease-out;
+
+    @include respond(phone) {
+      letter-spacing: 1rem;
+      font-size: 5rem;
+    }
   }
 
   &--sub {
@@ -30,6 +34,10 @@ body {
     letter-spacing: 1.75rem;
     animation: moveInRight 1s ease-out;
     -webkit-animation: moveInRight 1s ease-out;
+
+    @include respond(phone) {
+      letter-spacing: 0.5rem;
+    }
   }
 }
 
@@ -47,6 +55,14 @@ body {
   -ms-transition: all 0.2s;
   -o-transition: all 0.2s;
   letter-spacing: 0.2rem;
+
+  @include respond(tab-port) {
+    font-size: 3rem;
+  }
+
+  @include respond(phone) {
+    font-size: 2.5rem;
+  }
 
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
