--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -15,6 +15,10 @@
   -ms-transition: transform 0.3s;
   -o-transition: transform 0.3s;
 
+  @include respond(tab-port) {
+    padding: 2rem;
+  }
+
   &__icon {
     font-size: 6rem;
     margin-bottom: 0.5rem;
@@ -22,6 +26,10 @@
     background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
     -webkit-background-clip: text;
     color: transparent;
+
+    @include respond(tab-port) {
+      margin-bottom: 0;
+    }
   }
 
   &:hover {
