--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -13,6 +13,14 @@
   -moz-transition: all 0.3s;
   -ms-transition: all 0.3s;
   -o-transition: all 0.3s;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+
+  @supports (-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px)) {
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    background-color: rgba($color-black, 0.3);
+  }
 
   &__content {
     @include absCenter;
@@ -37,11 +45,19 @@
     -moz-transition: all 0.5s 0.2s;
     -ms-transition: all 0.5s 0.2s;
     -o-transition: all 0.5s 0.2s;
+
+    // @include respond(tab-port) {
+    //   width: 100%;
+    // }
   }
 
   &__left {
     width: 33.33%;
     display: table-cell;
+
+    // @include respond(tab-port) {
+    //   width: 100%;
+    // }
   }
   &__right {
     width: 66.67%;
