--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,9 +4,21 @@
   font-size: 1.4rem;
   color: $color-grey-light-1;
 
+  @include respond(tab-port) {
+    padding: 8rem 0;
+  }
+  // @include respond(phone) {
+  //   top: 3rem;
+  //   right: 3rem;
+  // }
+
   &__logo-box {
     text-align: center;
     margin-bottom: 8rem;
+
+    @include respond(tab-port) {
+      margin-bottom: 6rem;
+    }
   }
 
   &__logo {
@@ -18,6 +30,15 @@
     border-top: 1px solid $color-grey-dark;
     padding-top: 2rem;
     display: inline-block;
+
+    @include respond(tab-port) {
+      width: 100%;
+      text-align: center;
+    }
+    // @include respond(phone) {
+    //   top: 3rem;
+    //   right: 3rem;
+    // }
   }
 
   &__list {
@@ -64,5 +85,10 @@
     padding-top: 2rem;
     width: 80%;
     float: right;
+
+    @include respond(tab-port) {
+      width: 100%;
+      float: none;
+    }
   }
 }
